--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.738.0",
     "aws-cdk-lib": "2.172.0",
-    "constructs": "^10.0.0"
+    "aws-sdk": "^2.1692.0",
+    "constructs": "^10.0.0",
+    "pptxgenjs": "^3.12.0"
   }
 }
