--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.738.0",
+    "@mendable/firecrawl-js": "^1.18.2",
     "aws-cdk-lib": "2.172.0",
     "aws-sdk": "^2.1692.0",
     "constructs": "^10.0.0",
-    "pptxgenjs": "^3.12.0"
+    "pptxgenjs": "^3.12.0",
+    "tavily": "^1.0.2"
   }
 }
