--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.755.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.755.0",
     "@aws-sdk/client-secrets-manager": "^3.738.0",
     "@mendable/firecrawl-js": "^1.18.2",
     "aws-cdk-lib": "2.172.0",
